@@ -106,7 +106,7 @@
       <dictionary>
         <item>
             <key> <string>text</string> </key>
-            <value> <string>python:object.REQUEST.get(\'form_id\') == \'Entity_viewAccountingTransactionList\'</string> </value>
+            <value> <string>python:object.REQUEST.get(\'form_id\', None) == \'Entity_viewAccountingTransactionList\'</string> </value>
         </item>
       </dictionary>
     </pickle>
