@@ -1,1 +1,1 @@
-1.0rc6
+1.0rc7
